--- a/index.html
+++ b/index.html
@@ -166,6 +166,40 @@
                     </div>
                 </div>
             </section>
+            <section class="page__why why">
+                <div class="why__container">
+                    <div class="why__images images-why">
+                        <div class="images-why__item images-why__item_1">
+                            <img src="/img/why/01.jpg" alt="why">
+                        </div>
+                        <div class="images-why__item images-why__item_2">
+                            <img src="/img/why/02.jpg" alt="why">
+                        </div>
+                    </div>
+                    <div class="why__content">
+                        <div class="why__header header-main">
+                            <a href="" class="header-main__label">why choose us</a>
+                            <h1 class="header-main__title">We help great brands scale with content marketing.</h1>
+                            <div class="header-main__text">
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum facere asperiores
+                                    neque
+                                    unde quisquam, iusto cumque cupiditate enim minus quae
+                                    temporibus quidem deserunt, cum voluptatem dolore ex consequatur alias suscipit!
+                                </p>
+                            </div>
+                            <ul class="header-main__list">
+                                <li>This is some text inside of a div.</li>
+                                <li>This is some text inside of a div.</li>
+                                <li>This is some text inside of a div.</li>
+                                <li>This is some text inside of a div.</li>
+                                <li>This is some text inside of a div.</li>
+                                <li>This is some text inside of a div.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">footer</footer>
     </div>
